# raidar

./: .env.example  .gitignore  README.md  SKILL.md  config.yaml  context.md  pyproject.toml
docs/: concept-model.md
infra/: install_launchd.sh  install_skill.sh  smoke.sh  test_sandbox.sh
infra/launchd/: com.airadar.digest.plist  com.airadar.enrich.plist
jobs/: backfill.py  bulk_capture.py  capture.py  cli.py  digest.py  enrich.py  health.py  launchd.py  merge.py  reevaluate.py  reindex.py  rename.py  search.py  seed.py
lib/: body.py  config.py  embeddings.py  entity_body.py  github.py  llm.py  logging_setup.py  secrets.py  seed_concepts.yaml  vault.py
