[project]
name = "ai-radar-tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.2.0",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
    "trafilatura>=2.0.0",
    "typer>=0.25.1",
]
